<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vertretungsplan</string>
    <string name="menu_info">Info</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_refresh">Aktualisieren</string>
    <string name="menu_link">Website</string>
    <string name="menu_mail">Mail an den Entwickler</string>

    <string name="title_changelog">Changelog</string>
    <string name="changelog_close">Schließen</string>

    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_afragment">AFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Einstellungen</string>
    
    <string name="info_dialog"><![CDATA[
        ©2014 Johan v. Forstner<br/><br/>
        Solltest du eine Frage oder Anregung zu dieser App haben, kontaktiere mich bitte über den Button "Mail an den Entwickler" im Menü.<br/><br/>
        Icon-Design: Johan v. Forstner, basierend auf <a href="http://thenounproject.com/term/layout/13008/">"Layout"</a> von Qing Li, The Noun Project<br/><br/>
        Diese App nutzt die folgenden Open-Source-Bibliotheken:<br />
        <a href="http://jsoup.org">jsoup</a> von Jonathan Hedley unter der <a href="http://jsoup.org/license">MIT-Lizenz</a><br />
        <a href="https://github.com/kolavar/android-support-v4-preferencefragment">android-support-v4-preferencefragment</a> von kolavar unter der <a href="http://opensource.org/licenses/Apache-2.0">Apache 2.0 Lizenz</a><br />
        <a href="https://github.com/keyboardsurfer/Crouton">Crouton</a> von Cyril Mottier/Benjamin Weiss/Marie Schweiz unter der <a href="http://opensource.org/licenses/Apache-2.0">Apache 2.0 Lizenz</a><br />
        <a href="https://code.google.com/p/google-gson/">Gson</a> von Google Inc. unter der <a href="http://opensource.org/licenses/Apache-2.0">Apache 2.0 Lizenz</a><br />
        <a href="http://developer.android.com/tools/support-library/index.html">android-support-v4</a> und <a href="http://developer.android.com/tools/support-library/index.html">android-support-v7</a> vom Android Open Source Project unter der <a href="http://opensource.org/licenses/Apache-2.0">Apache 2.0 Lizenz</a><br />
        <a href="http://nineoldandroids.com/">NineOldAndroids</a> von Jake Wharton unter der <a href="http://opensource.org/licenses/Apache-2.0">Apache 2.0 Lizenz</a><br />
        <a href="https://github.com/JoeJErnst/http-client">http-client</a> von Joe J. Ernst unter der <a href="http://opensource.org/licenses/Apache-2.0">Apache 2.0 Lizenz</a><br/><br/>
        Außerdem wurden Teile des Codes aus <a href="https://github.com/raphaelm/opacclient">opacclient</a> von Raphael Michel unter der <a href="http://opensource.org/licenses/MIT">MIT-Lizenz</a> wiederverwendet.<br/>
        Einige Grafiken wurden mit dem <a href="http://romannurik.github.io/AndroidAssetStudio/index.html">Android Asset Studio</a> von Roman Nurik erstellt.]]>
    </string>

    <string name="crash_dialog_title">Oh nein! Es ist etwas schiefgegangen.</string>
    <string name="crash_dialog_text">Die Vertretungsplan-App ist abgestürzt. Bitte sende mir einen Fehlerbericht per E-Mail, damit ich das Problem beheben kann. Wähle bitte, nachdem du auf "OK" getippt hast, deine E-Mail-App aus, um den Bericht zu senden.</string>
    <string name="crash_dialog_comment_prompt">Besonders hilfreich wäre es, wenn du im Kommentarfeld unten erklären würdest, was du gerade in der App gemacht hast oder ob der Fehler bei der Hintergrundaktualisierung aufgetreten ist.</string>

    <string name="welcome">Willkommen</string>
    <string name="select_your_school">Bitte wähle deine Schule aus!</string>

    <string name="no_info">Keine Informationen</string>
    <string name="notification_text">Es gibt Änderungen auf dem Vertretungsplan!</string>

    <string name="suggest_school">Deine Schule wird nicht unterstützt? Schlage sie vor!</string>
    <string name="geolocate">Schulen in der Nähe finden</string>
    <string name="geolocate_progress">Position wird gesucht...</string>
    <string name="geolocate_disabled">Standort nicht verfügbar</string>
    <string name="alphabetic_list">Alphabetische Liste anzeigen</string>

    <string name="username">Benutzername/Kennung</string>
    <string name="password">Passwort</string>
    <string name="login">Gib die Benutzerdaten ein, mit denen du dich auch online beim Vertretungsplan deiner Schule einloggst.</string>
    <string name="signin">Einloggen</string>
    <string name="cancel">Abbrechen</string>
    <string name="vertretung">Vertretung</string>
    <string name="nachrichten">Nachrichten</string>

</resources>
